src/theme/main.less
@blueArctic: #e2f1fd;
@greySnow: #f3f5f7;
@greySmoke: #e4e8ec;

.block.logos {
  .grid-items [data-rbd-droppable-id] {
    display: flex;
  }

  // general spacing in the Row block wrapper
  & [class^='block-editor-'],
  [class^='block-editor-'].contained {
    padding-right: 1rem;
    padding-left: 1rem;
    margin-top: 1rem;
    margin-bottom: 1rem;
  }

  .one.grid-items [class^='block-editor-'] {
    width: 100%;
  }

  .two.grid-items [class^='block-editor-'] {
    width: 50%;
  }

  .three.grid-items [class^='block-editor-'] {
    width: 33.33333333%;
  }

  .four.grid-items [class^='block-editor-'] {
    width: 25%;
  }

  [class^='block-editor-'].selected .ui.basic.button.remove-block-button,
  [class^='block-editor-']:hover .ui.basic.button.remove-block-button {
    display: block;
  }

  .cell-wrapper {
    position: relative;
    width: 100%;
    flex-grow: 1;
  }

  .logo-image {
    width: 100%;
    margin-bottom: 10px;
    object-fit: contain;
  }

  h3 {
    font-size: 14px;
    font-weight: 300;
    line-height: 18px;
    text-align: center;
  }

  .four.column.grid {
    .logo-image {
      max-width: 200px;
      height: 100px;
    }

    h3 {
      width: 200px;
    }
  }

  .three.column.grid {
    .logo-image {
      max-width: 200px;
    }

    h3 {
      max-width: 300px;
    }
  }

  .block.logo-block {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;

    .logo-image {
      width: 100%;
      max-height: 100px;
      object-position: top center;
    }

    h3 {
      max-width: 400px;
    }
  }
}

.block.logo {
  display: flex;
  flex-direction: column;
  align-items: center;

  .logo-image {
    width: 100%;
    max-height: 100px;
    object-position: top center;
  }

  h3 {
    max-width: 400px;
  }
}

.block.logos {
  .block.logo-block,
  .logo-block {
    &,
    .block {
      &:hover::before {
        border: none;
      }
    }
  }
}

